Fix dropdowns in dark mode so that it stays dark when in focus (#166)
* Fix select in dark mode so that it stays dark when in focus

* Change tabs to spaces

--- a/src/styles/_darkmode.scss
+++ b/src/styles/_darkmode.scss
@@ -177,6 +177,10 @@ $theme-input-border: #242424;
             border-color: $theme-input-border;
         }
 
+        .Select.is-focused:not(.is-open) > .Select-control {
+            background-color: $theme-input-background;
+        }
+
         .Select-control {
             background-color: $theme-input-background;
             color: $theme-input-color;
